# a2a-sample

./: pyproject.toml
notebooks/: ollama.ipynb
src/: llm.py  main.py  tasks.py
src/agent/: main.py  settings.py  tasks.py
src/client/: main.py
